# ardupilot_gazebo

./: .gitignore  CMakeLists.txt  INSTALLATION.md  README.md  package.xml
.ci/: ci_before_install.sh  ci_test_build.sh
.github/workflows/: melodic.yml  noetic.yml
config/: .gitignore  apm_config.yaml  apm_config_NAMESPACE.yaml  apm_pluginlists.yaml  duckorange_v432.params  kopterworx_joint_movable_mass_controller.yaml  kopterworx_joint_position_controller.yaml  kopterworx_joint_position_controllers.yaml  kopterworx_joint_position_tilt_controller.yaml  kopterworx_red.parm  kopterworx_red_autotuned.parm  kopterworx_red_v403.params  kopterworx_red_v41_thrust_compassless.params  kopterworx_v432.params
include/: ArduCopterIRLockPlugin.hh  ArduCopterPlugin.hh  ArduPilotPlugin.hh  GazeboGimbal.h  GimbalSmall2dPlugin.hh  SelectionBuffer.hh
launch/: ardrone.launch  att_control.launch  bebop.launch  brick_spawn.launch  carrot_control.launch  empty_world.launch  generate_mavros_config.launch  kopterworx.launch  kopterworx_2cams.launch  kopterworx_tilt_rotors.launch  mavros.launch  mavros_node.launch  sim_vehicle.launch  spawn_kopterworx.launch  spawn_vehicle.launch  spawn_zephyr.launch  velodyne_controller.launch  zephyr.launch
models/: CMakeLists.txt
models/ardrone/urdf/: uav.base.urdf.xacro  uav.gazebo.xacro
models/bebop/meshes/: wind_turbine_base.dae  wind_turbine_rotor.dae
models/bebop/urdf/: bebop.urdf.xacro  bebop_base.urdf.xacro  brick_green.urdf  brick_red.urdf  multirotor_base.urdf.xacro
models/hawk/urdf/: hawk.urdf.xacro  hawk_base.urdf.xacro
models/kopterworx/urdf/: kopterworx.urdf.xacro  kopterworx_base.urdf.xacro  kopterworx_tilt.urdf.xacro  kopterworx_tilt_base.urdf.xacro
models/util/: multirotor_base.urdf.xacro  multirotor_base_2_cams.urdf.xacro  multirotor_movable_masses.urdf.xacro  multirotor_tilt.urdf.xacro
models/zephyr_delta_wing/meshes/: flap_left.dae  flap_right.dae  propeller.dae  wing_only.dae
models/zephyr_delta_wing/urdf/: zephyr.urdf.xacro
models/zephyr_delta_wing_ardupilot_demo/: delta_wing.sdf
motor_parameters/: 15x55.mat  22x11e.mat  22x8.mat  README.md  get_thrust_and_torque_k.m  inlbf2Nm.m  lbf2N.m  rpm2rads.m
scripts/: apm_config_namespaced.sh  automatic_takeoff.sh  dottmux.conf  mavproxy_start.sh  run_copter.sh  shell_scripts.sh
src/: ArduCopterIRLockPlugin.cc  ArduCopterPlugin.cc  ArduPilotPlugin.cc  GazeboGimbal.cpp  GimbalSmall2dPlugin.cc  brick_spawn.sh
startup/fixed_wing/: session.yml
worlds/: runway.world
